# ComputerGraphics_Tasks

./: .gitignore  README.md
test/: CMakeLists.txt
test/Shaders/: fragment.glsl  vertex.glsl
test/lib/assimp/lib/: assimp-vc143-mt.lib
test/lib/glad/: CMakeLists.txt
test/lib/lodepng/: CMakeLists.txt
test/src/: Camera.cpp  Mesh.cpp  Shader.cpp  main.cpp
test/task_1/: CMakeLists.txt  main.cpp
